--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "scripts": {
     "start": "node app"
   },
+  "directories":{
+  	"lib":"./lib",
+  	"bin":"./bin"
+  },
   "dependencies": {
     "express": "3.0.0rc3",
     "jade": "*",
     "underscore": "*"
+  },
+  "devDependencies": { 
+  	"qunit": "*" 
   }
 }
