first stab at an MP3 player for the server
- also added a Creative Commons sample MP3 file
- added package dependencies

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "express": "3.0.0rc3",
     "jade": "*",
-    "underscore": "*"
+    "lame": "*",
+    "underscore": "*",
+    "speaker": "*"
   },
   "devDependencies": { 
   	"qunit": "*" 
   }
+  "engine": "node >= 0.10.1"
 }
