The Local Queue Player will now continuously cycle through the queue -- big win!

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 	"fifojs": "*",
     "jade": "*",
     "lame": "*",
+	"log4js": "*",
 	"musicmetadata" : "*",
-    "speaker": "*",
     "underscore": "*"
   },
   "devDependencies": { 
