the slightest tweaks to logger stuff

--- a/lib/shared/logging/log4jsconfig.json
+++ b/lib/shared/logging/log4jsconfig.json
@@ -1,11 +1,12 @@
 {
-    "appenders":[
+    "appenders": [
         {"category":"server","type":"console"},
         {"category":"server","type":"file","filename":"logs/server.log"},
         {"category":"client","type":"console"},
-        {"category":"client","type":"file","filename":"logs/client.log"}],
+        {"category":"client","type":"file","filename":"logs/client.log"}
+    ],
         
-    "levels":{
+    "levels": {
         "server":"ALL",
         "client":"ALL"
     }
